--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.example.pokebattlewar"
-        minSdkVersion 21
+        applicationId "com.example.pokebw"
+        minSdkVersion 17
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
